--- a/platformio.ini
+++ b/platformio.ini
@@ -15,5 +15,7 @@ framework = arduino
 lib_deps = 
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
 	knolleary/PubSubClient@^2.8
+	mobizt/ESP_SSLClient@^1.1.4
+	mobizt/Firebase Arduino Client Library for ESP8266 and ESP32@4.3.8
 monitor_speed = 115200
 monitor_filters = direct, esp8266_exception_decoder
